// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetlookup call 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": OffsetLookup {
          "kind": "offsetlookup",
          "offset": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`offsetlookup multiple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": OffsetLookup {
        "kind": "offsetlookup",
        "offset": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"second\\"",
          "unicode": false,
          "value": "second",
        },
        "what": OffsetLookup {
          "kind": "offsetlookup",
          "offset": String {
            "isDoubleQuote": true,
            "kind": "string",
            "raw": "\\"first\\"",
            "unicode": false,
            "value": "first",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "obj",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`offsetlookup simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": OffsetLookup {
        "kind": "offsetlookup",
        "offset": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"index\\"",
          "unicode": false,
          "value": "index",
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "obj",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`offsetlookup variable 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": OffsetLookup {
        "kind": "offsetlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "obj",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
